--- a/doc/交易员管理系统.md
+++ b/doc/交易员管理系统.md
@@ -18,6 +18,7 @@
 * volume_limit　单笔最大股数
 * monetary_limit　单笔最大金额
 * status　状态，０：停用，１启用
+* account_type 账号类型, 交易员该值为 1
 
 
 ### 股票分配
@@ -28,9 +29,24 @@
 
 ## 接口信息
 
+返回数据结构：
+
+{"Counter":1,"Data":"msg","Err":0,"Qid":"531"}
+ 
+Counter : 该请求返回的数据次数,单次请求返回1,多次推送将累加
+ 
+Qid : 请求时带入的请求ID号,用于与前端的异步请求匹配
+ 
+Data : 具体数据
+ 
+Err : 0为成功， Data中为业务数据， -1为失败， Data中为string错误信息
+
 ### 交易员管理
 
 * 交易员添加
+    url: /user/add?username=xxx&password=xxx&chinese_name=xxx&available_money=xxx&stop_lost=xxx&volume_limit=xxx&monetary_limit=xxx&status=xxx&account_type=xxx&qid=123
+    success_response: {"Counter":1,"Data":"","Err":0,"Qid":"531"}
+    error_response: {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"531"}
 
 * 交易员修改
 
