--- a/doc/交易员管理系统.md
+++ b/doc/交易员管理系统.md
@@ -4,6 +4,18 @@
 
 管理登录和修改密码，管理员可以和投资人管理系统公用
 
+`url:` /user/login?username=xxx&pswd=xxx&qid=123
+
+`success_response:` {"Counter":1,"Data":{"UserName":"test","SessionId":"c364ce2a12fd556b96d0064120a046a20a58fba3"},"Err":0,"Qid":"123"}
+
+`error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
+
+`url:` /user/change?username=xxx&pswd=xxx&new_password=xxx&qid=123
+
+`success_response:` {"Counter":1,"Data":"","Err":0,"Qid":"123"}
+
+`error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
+
 ### 交易员管理
 
 交易员增加/删除/修改
@@ -47,19 +59,73 @@ Err : 0为成功， Data中为业务数据， -1为失败， Data中为string错
 
     `url:` /user/add?username=xxx&password=xxx&chinese_name=xxx&available_money=xxx&stop_lost=xxx&volume_limit=xxx&monetary_limit=xxx&status=xxx&account_type=xxx&qid=123
 
-    `success_response:` {"Counter":1,"Data":"","Err":0,"Qid":"531"}
+    `success_response:` {"Counter":1,"Data":"","Err":0,"Qid":"123"}
 
-    `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"531"}
+    `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
 
 * 交易员修改
 
+    `url:` /user/change?username=xxx&password=xxx&chinese_name=xxx&available_money=xxx&stop_lost=xxx&volume_limit=xxx&monetary_limit=xxx&status=xxx&account_type=xxx&qid=123  (除username外 其他为可选)
+
+    `success_response:` {"Counter":1,"Data":{"username":"xxx"....},"Err":0,"Qid":"123"}  (data部分为业务json返回结构,返回所有字段信息)
+
+    `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
+
 * 交易员删除
+
+    `url:` /user/del?username=xxxqid=123
+
+    `success_response:` {"Counter":1,"Data":"","Err":0,"Qid":"123"}
+
+    `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
 
 ### 股票分配管理
 
+股票分配管理属性包括：
+
+* accountname 股票账号名
+* stock_code　股票代码
+* stock_name　股票名称
+* stock_count 股票可用数量
+* username　  用户名
+* available_count　分配的数量
+* status　状态，０：停用，１启用
+
+* 新增交易员分配信息
+
+    `url:` /fundaccount/add?account_name=xxx&stock_code=xxx&stock_name=xxx&stock_count=xxx&username=xxx&available_count=xxx&status=xxxqid=123
+
+    `success_response:` {"Counter":1,"Data":{"account_name":"xxx"...},"Err":0,"Qid":"123"}  (data 返回所有字段 json)
+
+    `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
+    
+* 修改交易员分配信息
+
+    `url:` /fundaccount/change?account_name=xxx&stock_code=xxx&stock_name=xxx&stock_count=xxx&username=xxx&available_count=xxx&status=xxxqid=123  (除username外 其他为可选, 当stock_count修改后比已分配的总数小时, 已分配的数据将会被清空, 需重新分配)
+
+    `success_response:` {"Counter":1,"Data":{"accountname":"xxx"..., "clear":true},"Err":0,"Qid":"123"}  (data部分为业务json返回结构,返回所有字段信息, clear 为 true表示 stock_count修改后比已分配的总数小, 已清空分配的数据)
+
+    `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
+    
+* 删除交易员分配信息
+
+    `url:` /fundaccount/del?account_name=xxx&username=xxx&qid=123  (只填account_name表示删除该账号下的所有分配信息, 只填username表示删除所有账号下的该用户分配信息, 都填表示删除指定account_name下的username的分配信息)
+
+    `success_response:` {"Counter":1,"Data":""},"Err":0,"Qid":"123"} 
+
+    `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
+
+
 * 查询交易员股票分配
 
+    `url:` /fundaccount/search?account_name=xxxusername=xxx&qid=123  (只填account_name表示查询该账号下的所有分配信息, 只填username表示查询所有账号下的该用户分配信息, 都填表示查询指定account_name下的username的分配信息)
+
+    `success_response:` {"Counter":1,"Data":{"result":["accountname":"xxx"...]},"Err":0,"Qid":"123"}  (data 返回所有字段 json)
+
+    `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
+
 * 查询（特定／所有）股票账号的（某只／所有）股票情况
+
 
 
 
