--- a/doc/交易员管理系统.md
+++ b/doc/交易员管理系统.md
@@ -118,14 +118,19 @@ Err : 0为成功， Data中为业务数据， -1为失败， Data中为string错
 
 * 查询交易员股票分配
 
-    `url:` /fundaccount/search?account_name=xxxusername=xxx&qid=123  (只填account_name表示查询该账号下的所有分配信息, 只填username表示查询所有账号下的该用户分配信息, 都填表示查询指定account_name下的username的分配信息)
+    `url:` /fundaccount/user/search?account_name=xxx&username=xxx&qid=123  (只填account_name表示查询该账号下的所有分配信息, 只填username表示查询所有账号下的该用户分配信息, 都填表示查询指定account_name下的username的分配信息)
 
-    `success_response:` {"Counter":1,"Data":{"result":["accountname":"xxx"...]},"Err":0,"Qid":"123"}  (data 返回所有字段 json)
+    `success_response:` {"Counter":1,"Data":{"result":["accountname":"xxx"...]},"Err":0,"Qid":"123"}  (data 返回所有字段 json, result 为数组)
 
     `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
 
 * 查询（特定／所有）股票账号的（某只／所有）股票情况
 
+    `url:` /fundaccount/stock/search?account_name=xxx&stock_code=xxx&qid=123  (只填account_name表示查询该账号下的所有股票的分配信息, 只填stock_code表示查询所有账号下的该股票的分配信息, 都填表示查询指定account_name下的stock_code的分配信息)
+
+    `success_response:` {"Counter":1,"Data":{"result":["accountname":"xxx"...]},"Err":0,"Qid":"123"}  (data 返回所有字段 json, result 为数组)
+
+    `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
 
 
 
