--- a/doc/交易员管理系统.md
+++ b/doc/交易员管理系统.md
@@ -101,7 +101,7 @@ Err : 0为成功， Data中为业务数据， -1为失败， Data中为string错
     
 * 修改交易员分配信息
 
-    `url:` /fundaccount/change?account_name=xxx&stock_code=xxx&stock_name=xxx&stock_count=xxx&username=xxx&available_count=xxx&status=xxxqid=123  (除username外 其他为可选, 当stock_count修改后比已分配的总数小时, 已分配的数据将会被清空, 需重新分配)
+    `url:` /fundaccount/change?account_name=xxx&stock_code=xxx&stock_name=xxx&stock_count=xxx&username=xxx&available_count=xxx&status=xxxqid=123  (除account_name与username外 其他为可选, 当stock_count修改后比已分配的总数小时, 已分配的数据将会被清空, 需重新分配)
 
     `success_response:` {"Counter":1,"Data":{"accountname":"xxx"..., "clear":true},"Err":0,"Qid":"123"}  (data部分为业务json返回结构,返回所有字段信息, clear 为 true表示 stock_count修改后比已分配的总数小, 已清空分配的数据)
 
