--- a/doc/交易员管理系统.md
+++ b/doc/交易员管理系统.md
@@ -133,7 +133,71 @@ Err : 0为成功， Data中为业务数据， -1为失败， Data中为string错
     `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
 
 
+返回数据例子：
 
+FundAccount: [
+{
+FundAccountName: "fundaccount_test1",
+StocksInfo: [
+{
+StockCode: "SH600000",
+StockName: "浦发银行",
+StockCount: 10000,
+UsersInfo: [
+{
+UserName: "交易员1",
+AvailableCount: 4000,
+Status: 1
+},
+{
+UserName: "交易员2",
+AvailableCount: 6000,
+Status: 1
+}
+]
+},
+{
+StockCode: "SH600004",
+StockName: "白云机场",
+StockCount: 5000,
+UsersInfo: [
+{
+UserName: "交易员1",
+AvailableCount: 3000,
+Status: 1
+},
+{
+UserName: "交易员2",
+AvailableCount: 2000,
+Status: 1
+}
+]
+}
+]
+},
+{
+FundAccountName: "fundaccount_test2",
+StocksInfo: [
+{
+StockCode: "SH600005",
+StockName: "武钢股份",
+StockCount: 20000,
+UsersInfo: [
+{
+UserName: "交易员3",
+AvailableCount: 12000,
+Status: 1
+},
+{
+UserName: "交易员4",
+AvailableCount: 8000,
+Status: 1
+}
+]
+}
+]
+}
+]
 
 
 
