--- a/doc/交易员管理系统.md
+++ b/doc/交易员管理系统.md
@@ -135,6 +135,7 @@ Err : 0为成功， Data中为业务数据， -1为失败， Data中为string错
 
 返回数据例子：
 
+```json
 FundAccount: [
 {
 FundAccountName: "fundaccount_test1",
@@ -198,6 +199,6 @@ Status: 1
 ]
 }
 ]
-
+```
 
 
