--- a/doc/交易员管理系统.md
+++ b/doc/交易员管理系统.md
@@ -89,13 +89,14 @@ Err : 0为成功， Data中为业务数据， -1为失败， Data中为string错
 * stock_count 股票可用数量
 * username　  用户名
 * available_count　分配的数量
+* reapportion: stock_count改变导致需要重新分配 true, 不需要重新分配 false 
 * status　状态，０：停用，１启用
 
 * 新增交易员分配信息
 
     `url:` /fundaccount/add?account_name=xxx&stock_code=xxx&stock_name=xxx&stock_count=xxx&username=xxx&available_count=xxx&status=xxxqid=123
 
-    `success_response:` {"Counter":1,"Data":{"account_name":"xxx"...},"Err":0,"Qid":"123"}  (data 返回所有字段 json)
+    `success_response:` {"Counter":1,"Data":{"FundAccount":["FundAccountName":"xxx"...]},"Err":0,"Qid":"123"}  (data 返回所有字段 json)
 
     `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
     
@@ -103,7 +104,7 @@ Err : 0为成功， Data中为业务数据， -1为失败， Data中为string错
 
     `url:` /fundaccount/change?account_name=xxx&stock_code=xxx&stock_name=xxx&stock_count=xxx&username=xxx&available_count=xxx&status=xxxqid=123  (除account_name、username与stock_code外 其他为可选, 当stock_count修改后比已分配的总数小时, 已分配的数据将会被清空, 需重新分配)
 
-    `success_response:` {"Counter":1,"Data":{"accountname":"xxx"..., "clear":true},"Err":0,"Qid":"123"}  (data部分为业务json返回结构,返回所有字段信息, clear 为 true表示 stock_count修改后比已分配的总数小, 已清空分配的数据)
+    `success_response:` {"Counter":1,"Data":{"FundAccount":["FundAccountName":"xxx"...]},"Err":0,"Qid":"123"}  (data部分为业务json返回结构,返回所有字段信息, clear 为 true表示 stock_count修改后比已分配的总数小, 已清空分配的数据)
 
     `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
     
@@ -120,7 +121,7 @@ Err : 0为成功， Data中为业务数据， -1为失败， Data中为string错
 
     `url:` /fundaccount/user/search?account_name=xxx&username=xxx&qid=123  (只填account_name表示查询该账号下的所有分配信息, 只填username表示查询所有账号下的该用户分配信息, 都填表示查询指定account_name下的username的分配信息)
 
-    `success_response:` {"Counter":1,"Data":{"result":["accountname":"xxx"...]},"Err":0,"Qid":"123"}  (data 返回所有字段 json, result 为数组)
+    `success_response:` {"Counter":1,"Data":{"FundAccount":["FundAccountName":"xxx"...]},"Err":0,"Qid":"123"}  (data 返回所有字段 json, result 为数组)
 
     `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
 
@@ -128,12 +129,12 @@ Err : 0为成功， Data中为业务数据， -1为失败， Data中为string错
 
     `url:` /fundaccount/stock/search?account_name=xxx&stock_code=xxx&qid=123  (只填account_name表示查询该账号下的所有股票的分配信息, 只填stock_code表示查询所有账号下的该股票的分配信息, 都填表示查询指定account_name下的stock_code的分配信息)
 
-    `success_response:` {"Counter":1,"Data":{"result":["accountname":"xxx"...]},"Err":0,"Qid":"123"}  (data 返回所有字段 json, result 为数组)
+    `success_response:` {"Counter":1,"Data":{"FundAccount":["FundAccountName":"xxx"...]},"Err":0,"Qid":"123"}  (data 返回所有字段 json, result 为数组)
 
     `error_response:` {"Counter":1,"Data":"error info ...","Err":-1,"Qid":"123"}
 
 
-返回数据例子：
+返回数据json结构：
 
 ```json
 FundAccount: [
@@ -144,6 +145,7 @@ FundAccount: [
     StockCode: "SH600000",
     StockName: "浦发银行",
     StockCount: 10000,
+    Reapportion: false,
     UsersInfo: [
     {
       UserName: "交易员1",
@@ -160,15 +162,16 @@ FundAccount: [
     StockCode: "SH600004",
     StockName: "白云机场",
     StockCount: 5000,
+    Reapportion: true,
     UsersInfo: [
     {
       UserName: "交易员1",
-      AvailableCount: 3000,
+      AvailableCount: 0,
       Status: 1
     },
     {
       UserName: "交易员2",
-      AvailableCount: 2000,
+      AvailableCount: 0,
       Status: 1
     }
   ]}
@@ -180,6 +183,7 @@ FundAccount: [
     StockCode: "SH600005",
     StockName: "武钢股份",
     StockCount: 20000,
+    Reapportion: false,
     UsersInfo: [
     {
       UserName: "交易员3",
