--- a/doc/交易员管理系统.md
+++ b/doc/交易员管理系统.md
@@ -110,7 +110,7 @@ Err : 0为成功， Data中为业务数据， -1为失败， Data中为string错
     
 * 删除交易员分配信息
 
-    `url:` /fundaccount/del?account_name=xxx&username=xxx&qid=123  (只填account_name表示删除该账号下的所有分配信息, 只填username表示删除所有账号下的该用户分配信息, 都填表示删除指定account_name下的username的分配信息)
+    `url:` /fundaccount/del?account_name=xxx&username=xxx&stock_code=xxx&qid=123  (只填account_name表示删除该账号下的所有分配信息, 只填username表示删除所有账号下的该用户分配信息, 都填表示删除指定account_name下的username的stock_code分配信息,stock_code不可单独填写，需和account_name username 组合使用)
 
     `success_response:` {"Counter":1,"Data":""},"Err":0,"Qid":"123"} 
 
