--- a/doc/交易员管理系统.md
+++ b/doc/交易员管理系统.md
@@ -83,7 +83,7 @@ Err : 0为成功， Data中为业务数据， -1为失败， Data中为string错
 
 股票分配管理属性包括：
 
-* accountname 股票账号名
+* account_name 股票账号名
 * stock_code　股票代码
 * stock_name　股票名称
 * stock_count 股票可用数量
